# md-js

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  build.sh
.github/workflows/: build.yml  release.yml
desc/: app.json
examples/mdjscode/: Makefile  fetch.js  main.c  math.js  textedit.c  textedit.h
rp/src/: CMakeLists.txt  emul.c  jerry_port.c  js_fetch.c  js_worker.c  main.c  memmap_rp.ld
rp/src/include/: js_fetch.h  js_worker.h  mdjs_protocol.h  memfunc.h  target_firmware.h  tprotocol.h
tools/: bump_version.sh
